Agrego y modifico rutas y archivos del backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 HOST=localhost
 USER=root
-PASSWORD=
-DATABASE=sistema_prestamos_electronica
+PASSWORD= 2972f3d3
+DATABASE=sistema_prestamo_electronica
 DB_PORT=3306
 SERVER_PORT=4000
 JWT_SECRET=clave_muy_muy_secreta_que_deberia_ser_larga
