--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "sweetalert2": "^11.22.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
